--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -5,7 +5,7 @@
   <%= f.text_field :name %>
 
   <%= f.label :description %>
-  <%= f.text_area :description, cols: 40, rows: 5 %>
+  <%= f.text_area :description, rows: 5 %>
 
   <%= f.label :location %>
   <%= f.text_field :location %>
