--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -13,5 +13,8 @@
       </p>
     </div>
   </section>
-
 <% end %>
+
+<section class="admin">
+  <%= link_to 'Add New Event', new_event_path, class: 'button' %>
+</section>
