--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,26 +11,13 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <%= link_to image_tag('logo'), root_path %>
-        <ul>
-          <li>
-            <%= link_to 'All Events', events_path %>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <%= render 'layouts/header' %>
 
     <div class="content">
       <%= yield %>
     </div>
 
-    <footer>
-      <p>
-        Make by <a href="https://github.com/davidblackwelder"> David</a>
-      </p>
-    </footer>
+    <%= render 'layouts/footer' %>
 
   </body>
 </html>
