--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
   <p>
-    Make by <a href="https://github.com/davidblackwelder"> David</a>
+    Made by <a href="https://github.com/davidblackwelder"> David</a>
   </p>
 </footer>
