--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,4 +7,20 @@
       <%= link_to 'Delete Account', @user, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button delete' %>
     </div>
   <% end %>
+  <% if @registrations.present? %>
+    <h3>Registrations</h3>
+    <% @registrations.each do |r| %>
+      <div class="registration">
+        <div class="image">
+          <%= link_to image_tag(r.event.image_file_name), r.event %>
+        </div>
+        <div class="name">
+          <%= link_to r.event.name, r.event %>
+        </div>
+        <div class="date">
+          <%= time_ago_in_words(r.created_at) %> ago
+        </div>
+      </div>
+    <% end %>
+  <% end %>
 </section>
