--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -23,5 +23,9 @@
   <%= f.label :image_file_name %>
   <%= f.text_field :image_file_name %>
 
+  <div class="checkboxes">
+    <%= f.collection_check_boxes(:category_ids, Category.all, :id, :name) %>
+  </div>
+
   <%= f.submit %>
 <% end %>
